@startuml

class CreateTypologyUI {
}

class CreateTypologyController {
typologyList : TypologyList
createTypology(typologyDesignation)
}


class TypologyList {
typologyList : List<Typology>
createTypology(typologyDesignation)
listDoesNotContain(newTypology)
add(newTypology)
}

class Typology {
typologyDesignation : String
}

CreateTypologyUI "1" o-- "1" CreateTypologyController
CreateTypologyController "1" o-- "1" TypologyList
TypologyList "1 " *-- "    *" Typology

@enduml